Added plant lover section

--- a/index.html
+++ b/index.html
@@ -56,54 +56,74 @@
         <div class="product-grid">
 
             <div class="product-card">
-                <img src="./Images/sample-flower-image.png" alt="Lily Blossom">
+                <img src="./Images/card 01.png" alt="Lily Blossom">
                 <h3>Lily Blossom</h3>
                 <p>20 USD</p>
                 <button>Add to Cart</button>
             </div>
             <div class="product-card">
-                <img src="./Images/plant1.jpg" alt="Lily Blossom">
+                <img src="./Images/card 01.png" alt="Lily Blossom">
                 <h3>Lily Blossom</h3>
                 <p>20 USD</p>
                 <button>Add to Cart</button>
             </div>
             <div class="product-card">
-                <img src="./Images/plant1.jpg" alt="Lily Blossom">
+                <img src="./Images/card 01.png" alt="Lily Blossom">
                 <h3>Lily Blossom</h3>
                 <p>20 USD</p>
                 <button>Add to Cart</button>
             </div>
             <div class="product-card">
-                <img src="./Images/plant1.jpg" alt="Lily Blossom">
+                <img src="./Images/card 01.png" alt="Lily Blossom">
                 <h3>Lily Blossom</h3>
                 <p>20 USD</p>
                 <button>Add to Cart</button>
             </div>
             <div class="product-card">
-                <img src="./Images/sample-flower-image.png" alt="Lily Blossom">
+                <img src="./Images/card 01.png" alt="Lily Blossom">
                 <h3>Lily Blossom</h3>
                 <p>20 USD</p>
                 <button>Add to Cart</button>
             </div>
             <div class="product-card">
-                <img src="./Images/plant1.jpg" alt="Lily Blossom">
+                <img src="./Images/card 01.png" alt="Lily Blossom">
                 <h3>Lily Blossom</h3>
                 <p>20 USD</p>
                 <button>Add to Cart</button>
             </div>
             <div class="product-card">
-                <img src="./Images/plant1.jpg" alt="Lily Blossom">
+                <img src="./Images/card 01.png" alt="Lily Blossom">
                 <h3>Lily Blossom</h3>
                 <p>20 USD</p>
                 <button>Add to Cart</button>
             </div>
             <div class="product-card">
-                <img src="./Images/plant1.jpg" alt="Lily Blossom">
+                <img src="./Images/card 01.png" alt="Lily Blossom">
                 <h3>Lily Blossom</h3>
                 <p>20 USD</p>
                 <button>Add to Cart</button>
             </div>
 
+        </div>
+    </section>
+
+    <!-- Flower & Plants Lover Section -->
+    <section class="container lover-section">
+        <div class="lover-img">
+            <img src="./Images/flower-store.png" alt="Flower Lover">
+            <img src="./Images/trusted-badge.png" alt="Trusted Badge" class="badge-overlay">
+        </div>
+
+        <div class="lover-content">
+            <h2>Flower & Plants Lover</h2>
+            <ul>
+                <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to
+                    exotic blooms, we offer a wide variety of fresh.</li>
+                <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to
+                    exotic blooms, we offer a wide variety of fresh.</li>
+                <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to
+                    exotic blooms, we offer a wide variety of fresh.</li>
+            </ul>
         </div>
     </section>
 
